Test/typing/should_fail/while_declaration.java
class A {
    public static void main(String[] args) {
        int i = 1;
        while (i < 10) {
            i++;
            int j = 50;
        }
        j++;
    }
}